--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "6.5.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.13.2",
+    "framer-motion": "^12.31.0",
     "i18next": "^25.7.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
